--- a/home.html
+++ b/home.html
@@ -16,9 +16,15 @@
 
 	<content>
 		<h1>Welcome to this little website.</h1>
-		<!-- insert hello world here -->
+		<p>Hello World</p>
+		<p>Welcome user</p>
+		<ul>
+			<li>You are so smart.</li>
+			<li>You are beautiful.</li>
+			<li>You are kind.</li>
+		</ul>
 
-		<img src="https://pbs.twimg.com/profile_images/1267905793610772480/rks7KARB_400x400.jpg">
+		<img src="https://ii.worldmarket.com/fcgi-bin/iipsrv.fcgi?FIF=/images/worldmarket/source/17686_XXX_v1.tif&wid=2000&cvt=jpeg">
 
 		<h2>Contact Us</h2>
 		<form id="contact">
@@ -27,6 +33,14 @@
 
 			Message:
 			<input type="textarea">
+
+			How did you hear about us?
+			<input type="checkbox" id="heard1" name="heard1" value="Google">
+			<label for="heard1">Google</label><br><br>
+			<input type="checkbox" id="heard2" name="heard2" value="A friend">
+			<label for="heard2">A friend</label><br><br>
+			<input type="checkbox" id="heard3" name="heard3" value="Other">
+			<label for="heard3">Other</label><br><br>
 
 			<input type="submit">
 
