--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 			<li>You are kind.</li>
 		</ul>
 
-		<img src="https://ii.worldmarket.com/fcgi-bin/iipsrv.fcgi?FIF=/images/worldmarket/source/17686_XXX_v1.tif&wid=2000&cvt=jpeg">
+		<img id='rubber-duck' src="https://ii.worldmarket.com/fcgi-bin/iipsrv.fcgi?FIF=/images/worldmarket/source/17686_XXX_v1.tif&wid=2000&cvt=jpeg">
 
 		<h2>Contact Us</h2>
 		<form id="contact">
