Part 3 content added

--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,50 @@
-Not implemented yet! 
-
-<br>
-<br>
-
-<a href="./home.html"><< Back </a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile</title>
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <nav>
+        <ol>
+            <li class="crumb"><a href="./home.html">Home</a></li>
+            <li class="crumb"><a href="./profile.html">Profile</a></li>
+            <li class="crumb"><a href="./about.html">About</a></li>
+        </ol>
+    </nav>
+ 
+    <content>
+        <h1>Chris Puppe's Profile</h1>
+        <h2>Skills</h2>
+            <ul>
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Node.js</li>
+                <li>Python</li>
+                <li>Server Administrator</li>
+                <li>Cyber Security</li>
+                <li>DOM</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>VirtualBox</li>
+                <li>CompTia Project+</li>
+                <li>CompTia Network+</li>
+            </ul>
+        <h2>Interests & Passions</h2>
+            <h4>Efficiency:</h4>
+                <p>I enjoy see things function with the least effort or work possible.</p>
+            <h4>DRY:</h4>
+                <p>Creating reusable code is like magic. And once you've created that magic once there's no need to create it again.</p>
+            <h4>Continuous Improvement:</h4>
+                <p>Autonomously examined emerging and competing technologies to continually cut costs and increase visibility.</p>
+        <h2>Career Goals</h2>
+            <p>
+                I'm looking to start engineering software to fulfill the interests and passions I mentioned above. I'm building my new skills and abilities to be a greater assets and help my company and colleagues succeed.
+            </p>
+    </content>
+</body>
+</html>
