--- a/profile.html
+++ b/profile.html
@@ -19,24 +19,26 @@
     <content>
         <h1>Chris Puppe's Profile</h1>
         <h2>Skills</h2>
-            <ul>
-                <li>Javascript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Node.js</li>
-                <li>Python</li>
-                <li>Server Administrator</li>
-                <li>Cyber Security</li>
-                <li>DOM</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>VirtualBox</li>
-                <li>CompTia Project+</li>
-                <li>CompTia Network+</li>
-            </ul>
+        <div class="flex-container">
+            <div>Javascript</div>
+            <div>HTML</div>
+            <div>CSS</div>
+            <div>Node.js</div>
+            <div>Python</div>
+            <div>Server Administrator</div>
+            <div>Cyber Security</div>
+            <div>DOM</div>
+            <div>Git</div>
+            <div>GitHub</div>
+            <div>Virtualization</div>
+            <div>CompTia Project+</div>
+            <div>CompTia Network+</div>
+            <div>Windows Server</div>
+            <div>CentOS</div>
+        </div>
         <h2>Interests & Passions</h2>
             <h4>Efficiency:</h4>
-                <p>I enjoy see things function with the least effort or work possible.</p>
+                <p>I enjoy seeing things function with the least effort possible.</p>
             <h4>DRY:</h4>
                 <p>Creating reusable code is like magic. And once you've created that magic once there's no need to create it again.</p>
             <h4>Continuous Improvement:</h4>
