--- a/profile.html
+++ b/profile.html
@@ -48,5 +48,10 @@
                 I'm looking to start engineering software to fulfill the interests and passions I mentioned above. I'm building my new skills and abilities to be a greater assets and help my company and colleagues succeed.
             </p>
     </content>
+    <button id="color">My Favorite Color</button>
+    <button id="place">My Favorite Place</button>
+    <button id="ritual">My Favorite Ritual</button>
+
+    <script src="profile.js"></script>
 </body>
 </html>
