--- a/profile.html
+++ b/profile.html
@@ -48,9 +48,9 @@
                 I'm looking to start engineering software to fulfill the interests and passions I mentioned above. I'm building my new skills and abilities to be a greater assets and help my company and colleagues succeed.
             </p>
     </content>
-    <button id="color">My Favorite Color</button>
-    <button id="place">My Favorite Place</button>
-    <button id="ritual">My Favorite Ritual</button>
+    <button id="color" class="profile-btns">My Favorite Color</button>
+    <button id="place" class="profile-btns">My Favorite Place</button>
+    <button id="ritual" class="profile-btns">My Favorite Ritual</button>
 
     <script src="profile.js"></script>
 </body>
